--- a/views/country.ejs
+++ b/views/country.ejs
@@ -35,7 +35,7 @@
 	<p><a id = 'edit' href=" ">Edit</a></p> 	<a href='/'>Back</a>
 </div>
 
-<script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.2.min.js"></script>
+<script type="text/javascript" charset="utf8" src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.2.min.js"></script>
 <script>
 	let route = '/edit/' + <%- JSON.stringify(results[0].Name) %>
 	$('#edit').attr('href', route);
