--- a/views/editCountry.ejs
+++ b/views/editCountry.ejs
@@ -29,7 +29,7 @@
     </div>
 </div>
 
-<script type="text/javascript" charset="utf8" src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.2.min.js"></script>
+<script type="text/javascript" charset="utf8" src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.2.min.js"></script>
 <script>
 	let countryName = <%- JSON.stringify(country) %>
 	$('#countryName').attr('value', countryName);
